# CompressBitmap

./: README.md
BitmapCompression/app/: CMakeLists.txt  build.gradle
BitmapCompression/app/src/androidTest/java/com/webapps/bitmap/: ExampleInstrumentedTest.java
BitmapCompression/app/src/main/: AndroidManifest.xml
BitmapCompression/app/src/main/cpp/: native-lib.cpp
BitmapCompression/app/src/main/java/com/webapps/bitmap/: BaseApplication.java  FileUtil.java  MainActivity.java  NativeUtil.java  UIUtils.java
BitmapCompression/app/src/main/res/layout/: activity_main.xml
BitmapCompression/app/src/test/java/com/webapps/bitmap/: ExampleUnitTest.java
